Fix content cut off bug.

--- a/src/index.scss
+++ b/src/index.scss
@@ -18,7 +18,6 @@ html {
 body {
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 hr {
